--- a/cmd/goback/static/settings.html
+++ b/cmd/goback/static/settings.html
@@ -14,7 +14,10 @@
 
 {{define "sidebar"}}
     <li>
-        <a href="/backup/" title="Backup"><i class="fal fa-database"></i><span class="nav-link-text">Backup</span></a>
+        <a href="/backup/" title="Backup"><i class="fal fa-list-ul"></i><span class="nav-link-text">Backup logs</span></a>
+    </li>
+    <li>
+        <a href="/stats/" title="Statistics"><i class="fal fa-chart-bar"></i><span class="nav-link-text">Statistics</span></a>
     </li>
     <li>
         <a href="/settings/" title="Settings"><i class="fal fa-cog"></i><span class="nav-link-text">Settings</span></a>
@@ -27,7 +30,7 @@
         <h1 class="subheader-title">
             <i class="subheader-icon fal fa-cog"></i> Settings
             <small>
-
+                System configuration
             </small>
         </h1>
     </div>
