script to file fixed ui bug

--- a/cmd/goback/static/backup.html
+++ b/cmd/goback/static/backup.html
@@ -1,20 +1,5 @@
 {{define "css"}}
-    <style>
-        .pagination .page-link {
-            border-width: 1px;
-        }
-
-        .badge-stats {
-            margin-right: 3px;
-            font-weight: 400;
-        }
-
-        .bg-gray-light {
-            background-color: #f7f7f7;
-        }
-
-        @media print{@page {size: landscape}}
-    </style>
+    <link rel="stylesheet" media="screen, print" href="/assets/css/custom.css">
 {{end}}
 
 {{define "sidebar"}}
@@ -57,9 +42,12 @@
                     <select class="form-control" id="select-srcDirs"></select>
                 </div>
                 <table  id="table-backup"
-                        class="table table-sm"
                         data-buttons-class="default"
+                        class="table table-sm"
                         data-toggle="table"
+                        data-cookie="true"
+                        data-cookie-id-table="backup"
+                        data-cookies-enabled="['bs.table.columns']"
                         data-toolbar="#toolbar-backup"
                         data-search="true"
                         data-url="/summaries"
@@ -75,12 +63,12 @@
                     <thead>
                     <tr>
                         <th data-field="id" data-sortable="true">ID</th>
-                        <th data-field="workerCount" data-sortable="true" data-visible="false">Workers</th>
                         <th data-field="backupId" data-sortable="true" data-visible="false">Backup ID</th>
                         <th data-field="date" data-sortable="true" data-formatter="dateFormatter">Date</th>
-                        <th data-field="srcDir" data-sortable="true" data-formatter="shortDirFormatter">Source</th>
+                        <th data-field="srcDir" data-sortable="true" data-formatter="shortDirFormatter">Directory</th>
                         <th data-field="keeper.protocol" data-sortable="true" data-formatter="backupKeeperFormatter" data-visible="false">Storage</th>
                         <th data-field="backupType" data-sortable="true" data-formatter="backupTypeFormatter">Type</th>
+                        <th data-field="workerCount" data-sortable="true" data-visible="false">Workers</th>
                         <th data-field="state" data-sortable="true" data-formatter="backupStateFormatter">State</th>
                         <th data-field="execTime" data-sortable="true" data-formatter="toFixedFormatter">Time(Sec)</th>
 
@@ -346,42 +334,49 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-lg-2">
-                            <div>
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Files</button>
-                                <div class="summary-totalCount h3"></div>
-                            </div>
-                            <div class="mt-2">
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Size</button>
-                                <div class="summary-totalSize h3"></div>
-                            </div>
-                            <div class="mt-2 mb-3">
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Execution time</button>
-                                <div class="summary-execTime h3"></div>
+                            <div class="row">
+                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                    <div>
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Files</button>
+                                        <div class="summary-totalCount h3"></div>
+                                    </div>
+                                    <div class="mt-2">
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Size</button>
+                                        <div class="summary-totalSize h3"></div>
+                                    </div>
+                                    <div class="mt-2 mb-3">
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Execution time</button>
+                                        <div class="summary-execTime h3"></div>
 
-                                <div>- Reading: <span class="summary-readingTime 53"></span></div>
-                                <div>- Comparing: <span class="summary-comparingTime 53"></span></div>
-                                <div>- Coping: <span class="summary-backupTime 53"></span></div>
-                                <div>- Logging: <span class="summary-loggingTime 53"></span></div>
-                            </div>
-                            <div class="mt-2">
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Added</button>
-                                <div>
-                                    <span class="h3 summary-countAdded"></span>
-                                    (<span class="summary-sizeAdded"></span>)
+                                        <div>- Reading: <span class="summary-readingTime 53"></span></div>
+                                        <div>- Comparing: <span class="summary-comparingTime 53"></span></div>
+                                        <div>- Coping: <span class="summary-backupTime 53"></span></div>
+                                        <div>- Logging: <span class="summary-loggingTime 53"></span></div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="mt-2">
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Modified</button>
-                                <div>
-                                    <span class="h3 summary-countModified"></span>
-                                    (<span class="summary-sizeModified"></span>)
-                                </div>
-                            </div>
-                            <div class="mt-2">
-                                <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Deleted</button>
-                                <div>
-                                    <span class="h3 summary-countDeleted"></span>
-                                    (<span class="summary-sizeDeleted"></span>)
+                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                    <div>
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Added</button>
+                                        <div>
+                                            <span class="h3 summary-countAdded"></span>
+                                            (<span class="summary-sizeAdded"></span>)
+                                        </div>
+                                    </div>
+                                    <div class="mt-2">
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Modified</button>
+                                        <div>
+                                            <span class="h3 summary-countModified"></span>
+                                            (<span class="summary-sizeModified"></span>)
+                                        </div>
+                                    </div>
+                                    <div class="mt-2">
+                                        <button type="button" class="btn btn-default waves-effect waves-themed pt-0 pb-0">Deleted</button>
+                                        <div>
+                                            <span class="h3 summary-countDeleted"></span>
+                                            (<span class="summary-sizeDeleted"></span>)
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -464,7 +459,7 @@
 {{end}}
 
 {{define "script"}}
-    <script src="/assets/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+    <script src="/assets/js/custom.js"></script>
     <script>
         function backupRowStyle(row, index) {
             let classes = [
@@ -487,53 +482,10 @@
             }
         }
 
-        function extFormatter(val, row, idx) {
-            if (val.length < 1) {
-                return;
-            }
-            return val;
-        }
-
         function countWithRateFormatter(val, row, idx) {
             return val + '<span class="small float-right text-muted">' + row.rate + '%</span>'
 
         }
-
-        function dateFormatter(val, row, idx) {
-            return moment(val).format("YYYY-MM-DD HH:mm:ss");
-        }
-
-        function bytesToSize(bytes) {
-            return humanizedSize(bytes, true, 1);
-        }
-
-        function humanizedSize(bytes, si, toFixed) {
-            let thresh = si ? 1000 : 1024;
-            if(Math.abs(bytes) < thresh) {
-                return bytes + ' B';
-            }
-            let units = si
-                ? ['kB','MB','GB','TB','PB','EB','ZB','YB']
-                : ['KiB','MiB','GiB','TiB','PiB','EiB','ZiB','YiB'];
-            let u = -1;
-            do {
-                bytes /= thresh;
-                ++u;
-            } while(Math.abs(bytes) >= thresh && u < units.length - 1);
-            return bytes.toFixed(toFixed)+' '+units[u];
-        }
-
-        function basename(path) {
-            return path.replace(/^.*[\\\/]/, '');
-        }
-        // function dirname(path) {
-        //     // return path.substr(0, basename(path).lastIndexOf('.'));
-        //
-        //     return path.substring(0, path.lastIndexOf(basename(path)));
-        //
-        //     // return path.replacee
-        //     // trimEnd(path, basename(path));
-        // }
 
         function showChangedFiles(id, field) {
             let url = "/summaries/" + id + "/changes";
@@ -575,19 +527,9 @@
                 total = what.report.extRanking.length;
 
             $.each(what.report.extRanking, function(i, r) {
-                extTags += '<a href="#" class="filterFiles" data-cond="' + r.ext + '" data-how="' + how + '"><span class="badge badge-stats bg-' + colorSuffix + '-' + getPer(i, total) + '">'+ r.ext + " / " + bytesToSize(r.size) + '</span></a>';
+                extTags += '<a href="#" class="filterFiles" data-cond="' + r.ext + '" data-how="' + how + '"><span class="badge badge-stats bg-' + colorSuffix + '-' + getRate(i, total) + '">'+ r.ext + " / " + bytesToSize(r.size) + '</span></a>';
             });
             $(".stats-" + how + "-ext" ).html(extTags);
-        }
-
-        function getPer(i, total) {
-            let per =  Math.round((1 - (i / total)) * 100);
-            per = (per - (per % 10) - 20) * 10;
-            if (per < 100) {
-                per = 50;
-            }
-            return per;
-            ss
         }
 
         function getTab(field) {
@@ -614,118 +556,6 @@
         //     return byteSizeFormatter(row.sizeAdded + row.sizeModified);
         // }
 
-        function backupKeeperFormatter(val, row, idx) {
-            if (val === 1) {
-                return "Local disk";
-            }
-            if (val === 2) {
-                return "Remote (SFTP)";
-            }
-            if (val === 4) {
-                return "Remote (SFTP)";
-            }
-        }
-
-        function backupStatsSizeDistFormatter(val, row, idx) {
-            if (val >= 5000000000000) {
-                return "Big file";
-            }
-            if (val === 0) {
-                return val;
-            }
-            return '<span class="has-tooltip" title="' + bytesToSize(val / 10) + ' ~ ' +  bytesToSize(val) + '">' + humanizedSize(val / 10, true, 0) + " ~ " +  humanizedSize(val, true, 0) + '</span>';
-        }
-
-        function backupTotalCountFormatter(val, row, idx) {
-            return '<a href="javascript:void(0);" class="stats">' + thCommaFormatter(val, row, idx) + '</a>';
-        }
-
-        function shortDirFormatter(val, row, idx) {
-            if (val.length < 21) {
-                return val;
-            }
-            let dir = basename(val);
-            return '<span class="has-tooltip" title="' + val + '">.. ' + dir + '</span>';
-        }
-
-        function sizeBFormatter(val, row, idx) {
-            return row.size.toLocaleString();
-        }
-
-        function backupFileStateFormatter(val, row, idx) {
-            if (val === -1) {
-                return '<i><span class="text-danger">failed</span><i>';
-            }
-            if (val === 1) {
-                return "<i>done</i>";
-            }
-        }
-        function backupChangesNameFormatter(val, row, idx) {
-            return '<span class="has-tooltip" title="' + row.dir + '">' + val + '</span>';
-        }
-        function byteSizeFormatter(val, row, idx) {
-            if (val === 0) {
-                return '<span class="text-muted ">' + bytesToSize(val) + '</span>';
-            }
-            if (val < 1000) {
-                return bytesToSize(val);
-            }
-            return '<span class="has-tooltip" title="' + val.toLocaleString() + ' Bytes">' + bytesToSize(val) + '</span>';
-        }
-
-        function backupResultFormatter(val, row, idx, field) {
-            if (val === 0) {
-                return '<span class="text-muted">' + val + '</span>';
-            }
-
-            // return '<a href="javascript:void(0);" class="file">' + val.toLocaleString() + '</a>';
-            let link = '<a class="changed" href="javascript:void(0);" title="changed" data-field="' + field + '">' + val.toLocaleString() + '</a>';
-            return link;
-
-
-            // let th = $('#table-backup').find("[data-field='" + field + "']");
-            // // console.log(th.text());
-            // let link = $("<a/>", {
-            //     href: "javascript:void(0);",
-            //     class: "file",
-            //     "data-title": th.text(),
-            //     "data-field": field,
-            //     "title": "",
-            // }).html(
-            //     val.toLocaleString()
-            // );
-            // return link[0].outerHTML;
-        }
-
-        function backupTypeFormatter(val, row, idx) {
-            if (val === 1) {
-                return '<span class="badge badge-primary">Initial</span>';
-            }
-            if (val === 2) {
-                return 'Incremental';
-            }
-        }
-
-        function backupStateFormatter(val, row, idx) {
-            if (val === 5) {
-                return 'Completed';
-            }
-            return val;
-        }
-
-        function toFixedFormatter(val, row, idx) {
-            return  val.toFixed(2);
-        }
-
-        function thCommaFormatter(val, row, idx) {
-            if (val === 0) {
-                return '<span class="text-muted">0</span>';
-            }
-            return thousandCommaSep(val);
-        }
-        function thousandCommaSep(n) {
-            return n.toLocaleString();
-        }
 
         $("#modal-backup-changes, #modal-backup-stats")
             .on('show.bs.modal', function (e) {
