--- a/cmd/goback/static/settings.html
+++ b/cmd/goback/static/settings.html
@@ -1,15 +1,5 @@
 {{define "css"}}
-    <style>
-        .pagination .page-link {
-            border-width: 1px;
-        }
-
-        .badge-stats {
-            margin-right: 3px;
-            font-weight: 400;
-        }
-        @media print{@page {size: landscape}}
-    </style>
+    <link rel="stylesheet" media="screen, print" href="/assets/css/custom.css">
 {{end}}
 
 {{define "sidebar"}}
@@ -25,7 +15,6 @@
 {{end}}
 
 {{define "content"}}
-
     <div class="subheader">
         <h1 class="subheader-title">
             <i class="subheader-icon fal fa-cog"></i> Settings
@@ -101,7 +90,7 @@
                             {{end}}
                         </div>
                         <div class="card-body">
-                            <button class="btn btn-primary float-right">Update</button>
+                            <button class="btn btn-primary">Update</button>
                         </div>
                     </div>
                 </form>
@@ -116,7 +105,7 @@
 
                     <div class="card border mb-4">
                         <div class="card-header d-flex pr-2 align-items-center flex-wrap">
-                            <div class="card-title">Backup Job #{{$job.Id}} </div>
+                            <div class="card-title">#{{$job.Id}} </div>
                             <div class="custom-control d-flex custom-switch ml-auto">
                                 <input id="job-checkbox-{{$job.Id}}" type="checkbox" name="enabled" class="custom-control-input" {{if $job.Enabled}}checked{{end}}>
                                 <label class="custom-control-label fw-500" for="job-checkbox-{{$job.Id}}"></label>
@@ -180,8 +169,8 @@
                                 </div>
                             </div>
 
-                            <div class="float-right">
-                                <button type="button" class="btn btn-danger runBackup" data-id="{{$job.Id}}">Run backup</button>
+                            <div>
+                                <button type="button" class="btn btn-danger runBackup d-none" data-id="{{$job.Id}}">Run backup</button>
                                 <button class="btn btn-primary">Update</button>
                             </div>
                         </div>
