added init.d script removed golibs added goutils

--- a/cmd/goback/static/backup.html
+++ b/cmd/goback/static/backup.html
@@ -597,11 +597,11 @@
                 $(".summary-srcDir").text(row.srcDir);
                 $(".summary-date").text(row.date);
                 $(".summary-countAdded").text(row.countAdded);
-                $(".summary-sizeAdded").html(byteSizeFormatter(row.sizeAdded));
+                $(".summary-sizeAdded").html(bytesToSize(row.sizeAdded));
                 $(".summary-countModified").text(row.countModified);
-                $(".summary-sizeModified").html(byteSizeFormatter(row.sizeModified));
+                $(".summary-sizeModified").html(bytesToSize(row.sizeModified));
                 $(".summary-countDeleted").text(row.countDeleted);
-                $(".summary-sizeDeleted").html(byteSizeFormatter(row.sizeDeleted));
+                $(".summary-sizeDeleted").html(bytesToSize(row.sizeDeleted));
                 $(".summary-execTime").text(row.execTime.toFixed(2) + " sec");
                 $(".summary-readingTime").text( (moment.parseZone(row.readingTime).diff(moment.parseZone(row.date)) / 1000).toFixed(2) );
                 $(".summary-comparingTime").text( (moment.parseZone(row.comparisonTime).diff(moment.parseZone(row.readingTime)) / 1000).toFixed(2) );
